recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:15: error: not found: value level
  if (level < 1){
      ^